# StrideFundingProject

./: .gitattributes  .gitignore  FieldOfStudyData1617_1718_PP.csv  README.md  README.txt  School_Career_Outcomes_to_CIPs_SOCs.csv
NCESCrosswalk/: CrosswalkEstimation.R  dataImport.txt
NCESCrosswalk/Data Sets/: Crosswalk.csv
R/: DatabaseConnect.R
R/DataVisualization/: Alluvials.R  FirstVisualization.R  Presentation.Rmd  (+3 more)
docs/: CIP2020_SOC2018_Crosswalk.xlsx  Centralized School Datasets Roster.xlsx  Ideas of Improving CIP-SOC Crosswalk based on College.docx  Outline.docx  School_Career_Outcomes_to_CIPs_SOCs_.xlsx  Stride Funding - Lafayette Dyer Center Project Outline - August 2021 🌵.docx  Stride Funding Project Decision Document 🔨.docx  Stride Funding Project Product Brief 🚀🚀🚀.docx  Stride Funding Project Sprint Planning 📕📙📗📘.docx  Stride-Lafayette Final Presentation.pptx
sample_db_project/: main.py
server/: README.md  main.py  requirements.txt
strideNCESCrosswalkPrototypePython/: CIP2020_SOC2018_Crosswalk.csv  CIP2020_SOC2018_Crosswalk.parquet  School Career Outcomes to CIPs & SOCs  - MASTER LIST.csv  connect_to_psql.py  crosswalk.csv  crosswalk.parquet  crosswalk.py  dataCSVGeneration.py  database.ini  dataset_to_parqet.py  national_M2020_dl.parquet  national_M2020_dl.xlsx  socLookup.py  socLookupFuzzy.py  socLookupFuzzyMetaphone.py  socLookupFuzzySoundex.py  socLookupNGrams.py  socLookupTFIDF.py
stride_packages/python/: README.md  setup.cfg
stride_packages/python/src/stride-data/db/: database.py
stride_packages/python/src/stride_data/db/: database.py
(+24 files in other folders)
