[metadata]
name = stride_data
version = 0.0.1
author = Lafayette College CS390 Team
description = A small package used to connect to the Stride database
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = postgresql-common
    libpq-dev
    psycopg2
[options.packages.find]
where = src